[indexes][test] IJPL-244924: benchmark WAL against artificially slowed IO
+ Fake `FileChannel` with artificial delays on IO

GitOrigin-RevId: ea8347163d870f5a00c0999581953a5508c2663b